tests/valid/classes/02_property_assign_ok.cps
class A { let n: integer; }
let a: A = new A();
a.n = 3;
