tests/invalid/classes/01_missing_property.cps
class A { let n: integer; }
let a: A = new A();
let x = a.miss;   // no existe E034 error
